# virtual-library

./: .env  README.md  db.py  docker-compose.yml  logging_config.py  main.py  pyproject.toml  requirements.txt
app/: main.py
app/auth/dependencies/: auth_dependencies.py
app/auth/libs/: jwt.py
app/auth/middlewares/: validate_token.py
app/auth/routes/: auth_routers.py
app/auth/schemas/: auth_schemas.py
app/auth/services/: auth_service.py
app/config/: env_variables.py
app/core/repositories/: crud_repository.py
app/docs/: documentation.py
app/student/dependencies/: student_dependencies.py
app/student/models/: student_model.py
app/student/repositories/: sql_user_repository.py
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: backend_pre_start.py  main.py
backend/app/api/: deps.py  main.py
backend/app/api/reservation/: __init__.py  models.py  (+2 more)
backend/app/core/: config.py  db.py
backend/scripts/: prestart.sh
client/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  ProtectedRoute.tsx  index.css  main.tsx
client/src/common/: TermsAndConditionsPage.tsx
config/: database.py  logging_config.py
controllers/: auth_controllers.py
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/redux/: store.ts
libs/: jwt.py
middlewares/: validate_token.py
models/: student_model.py
routers/: auth_routers.py
student/models/: models.py
student/routers/: controller.py
student/services/: auth_service.py  student_service.py
(+98 files in other folders)
