[tool.poetry]
name = "virtual-library"
version = "0.1.0"
description = "A virtual library"
readme = "README.md"
packages = [{include = "app"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "~0.115.11"
pydantic = "~2.10.6"
passlib = "~1.7.4"
bcrypt = "4.0.1"
sqlmodel = "~0.0.22"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
